Fixed formatting of tweets on mobile

--- a/src/app/twitter/twitter/twitter.component.less
+++ b/src/app/twitter/twitter/twitter.component.less
@@ -1,1 +1,5 @@
-
+#tweet-container {
+	.twitter-tweet {
+		margin: auto;
+	}
+}
